仕分ブロック情報入力:新規作成

--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -6,10 +6,10 @@
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Width="1400" Height="800">
+             Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
-        <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}"/>
+        <Style TargetType="Window" BasedOn="{StaticResource InputDialog}"/>
     </prism:Dialog.WindowStyle>
 
     <UserControl.Resources>
@@ -116,7 +116,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="参照日"/>
-                        <TextBox Grid.Column="1" Text="{Binding Date, StringFormat=yyyy/MM/dd}"/>
+                        <DatePicker Grid.Column="1" SelectedDate="{Binding ReferenceDate}"/>
                         <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                     </Grid>
@@ -129,7 +129,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center"/>
-                        <TextBox Grid.Column="1" Text="{Binding CdKyoten}"/>
+                        <TextBox x:Name="CdKyoten" Grid.Column="1" Text="{Binding CdKyoten}" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="4"/>
                         <Label Grid.Column="2" Background="Blue"/>
                         <TextBlock Grid.Column="2" Text="{Binding NmKyoten}" Foreground="White"/>
                     </Grid>
@@ -142,8 +142,9 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="仕分グループコード"/>
-                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup}"/>
-                        <TextBox Grid.Column="2" Text="{Binding NmDistGroup}"/>
+                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup}" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="5"/>
+                        <Label Grid.Column="2" Background="Blue"/>
+                        <TextBlock Grid.Column="2" Text="{Binding NmDistGroup}" Foreground="White"/>
                     </Grid>
 
                     <Grid Grid.Row="3">
@@ -156,11 +157,11 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="適用開始日・無効日"/>
-                        <TextBox Grid.Column="1" Text="{Binding DtTekiyoKaishi, StringFormat=yyyy/MM/dd}"
-                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
+                        <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                        <TextBox Grid.Column="3" Text="{Binding DtTekiyoMuko, StringFormat=yyyy/MM/dd}"
-                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
+                        <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Button Grid.Column="4" Content="解除" Command="{Binding Release}" Margin="3"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
                     </Grid>
@@ -213,9 +214,10 @@
                         </Grid.ColumnDefinitions>
 
                         <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="InputBlockColumns"/>
-                        <DataGrid Grid.Column="0" x:Name="dataGrid" ItemsSource="{Binding Blocks}" AutoGenerateColumns="False"
-                                  IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
+                        <DataGrid Grid.Column="0" x:Name="dataGrid" ItemsSource="{Binding Blocks, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                                  AutoGenerateColumns="False" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
+                                  CanUserAddRows="{Binding CanAddBlockRows}" SelectedIndex="{Binding SelectBlockIndex}"
                                   Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
@@ -228,14 +230,32 @@
                             </DataGrid.ColumnHeaderStyle>
 
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="割当順" Binding="{Binding Seq}" Width="0.7*"
-                                                    ElementStyle="{StaticResource RightTextElement}"/>
-                                <DataGridTextColumn Header="ブロック" Binding="{Binding BlockCode}" Width="1*"
-                                                    ElementStyle="{StaticResource CenterTextElement}"/>
-                                <DataGridTextColumn Header="開始" Binding="{Binding Start}" Width="1*"
-                                                    ElementStyle="{StaticResource RightTextElement}"/>
-                                <DataGridTextColumn Header="終了" Binding="{Binding End}" Width="*"
-                                                    ElementStyle="{StaticResource RightTextElement}"/>
+                                <DataGridTextColumn Header="割当順" Binding="{Binding NuBlockSeq}" Width="0.7*"
+                                                    ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="ブロック" Binding="{Binding CdBlock, UpdateSourceTrigger=PropertyChanged, Delay=300}" Width="1*"
+                                                    ElementStyle="{StaticResource CenterTextElement}">
+                                    <DataGridTextColumn.EditingElementStyle>
+                                        <Style TargetType="TextBox">
+                                            <Setter Property="MaxLength" Value="2"/>
+                                        </Style>
+                                    </DataGridTextColumn.EditingElementStyle>
+                                </DataGridTextColumn>
+                                <DataGridTextColumn Header="開始" Binding="{Binding CdAddrFrom}" Width="1*"
+                                                    ElementStyle="{StaticResource RightTextElement}">
+                                    <DataGridTextColumn.EditingElementStyle>
+                                        <Style TargetType="TextBox">
+                                            <Setter Property="MaxLength" Value="4"/>
+                                        </Style>
+                                    </DataGridTextColumn.EditingElementStyle>
+                                </DataGridTextColumn>
+                                <DataGridTextColumn Header="終了" Binding="{Binding CdAddrTo}" Width="*"
+                                                    ElementStyle="{StaticResource RightTextElement}">
+                                    <DataGridTextColumn.EditingElementStyle>
+                                        <Style TargetType="TextBox">
+                                            <Setter Property="MaxLength" Value="4"/>
+                                        </Style>
+                                    </DataGridTextColumn.EditingElementStyle>
+                                </DataGridTextColumn>
                             </DataGrid.Columns>
                         </DataGrid>
 
@@ -277,7 +297,7 @@
 
                     <Label Grid.Row="0" Content="【履歴表示】" FontSize="18" Margin="3" VerticalContentAlignment="Center"/>
                     <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid2}" SettingsKey="InputLogColumns"/>
-                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding Logs}" AutoGenerateColumns="False"
+                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding ReferenceLog.LogInfos}" AutoGenerateColumns="False"
                               IsReadOnly="True" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                               SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
                               Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
@@ -295,7 +315,7 @@
                             <DataGridTextColumn Header="選択" Binding="{Binding DispSelected}" Width="0.3*"
                                                 ElementStyle="{StaticResource CenterTextElement}"/>
 
-                            <DataGridTextColumn Header="適用開始日" Binding="{Binding DtTekiyoKaishi}" Width="1*">
+                            <DataGridTextColumn Header="適用開始日" Binding="{Binding StartDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -310,7 +330,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="適用無効日" Binding="{Binding DtTekiyoMuko}" Width="1*">
+                            <DataGridTextColumn Header="適用無効日" Binding="{Binding EndDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -325,7 +345,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="変更者" Binding="{Binding CdShain}" Width="*">
+                            <DataGridTextColumn Header="変更者" Binding="{Binding ShainCode}" Width="*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
