--- a/src/Picking/Views/ShainDlg.xaml
+++ b/src/Picking/Views/ShainDlg.xaml
@@ -65,7 +65,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" Width="40" Text="{Binding ColorBtnName1}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <ComboBox x:Name="CdShainText" Grid.Column="1" Grid.Row="0" SelectedItem="{Binding Shain1}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+            <ComboBox x:Name="CdShainText" Grid.Column="1" Grid.Row="0" SelectedItem="{Binding Shain1}" ItemsSource="{Binding ShainCombo}" IsEnabled="{Binding EnableShain1}" Margin="3" 
                           IsEditable="True" TextSearch.TextPath="CdShain" b:ComboBoxBehavior.MaxLength="7">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -80,7 +80,7 @@
             <TextBlock Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left"  Text="{Binding Shain1.NmShain}" VerticalAlignment="Center" Margin="20 0 0 0" />
 
             <TextBlock Grid.Column="0" Grid.Row="1" Width="40" Text="{Binding ColorBtnName2}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <ComboBox Grid.Column="1" Grid.Row="1" SelectedItem="{Binding Shain2}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+            <ComboBox Grid.Column="1" Grid.Row="1" SelectedItem="{Binding Shain2}" ItemsSource="{Binding ShainCombo}" IsEnabled="{Binding EnableShain2}" Margin="3" 
                           IsEditable="True" TextSearch.TextPath="CdShain" b:ComboBoxBehavior.MaxLength="7">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -95,7 +95,7 @@
             <TextBlock Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left"  Text="{Binding Shain2.NmShain}" VerticalAlignment="Center" Margin="20 0 0 0" />
 
             <TextBlock Grid.Column="0" Grid.Row="2" Width="40" Text="{Binding ColorBtnName3}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <ComboBox Grid.Column="1" Grid.Row="2" SelectedItem="{Binding Shain3}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+            <ComboBox Grid.Column="1" Grid.Row="2" SelectedItem="{Binding Shain3}" ItemsSource="{Binding ShainCombo}" IsEnabled="{Binding EnableShain3}" Margin="3" 
                           IsEditable="True" TextSearch.TextPath="CdShain" b:ComboBoxBehavior.MaxLength="7">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -110,7 +110,7 @@
             <TextBlock Grid.Column="2" Grid.Row="2" HorizontalAlignment="Left"  Text="{Binding Shain3.NmShain}" VerticalAlignment="Center" Margin="20 0 0 0" />
 
             <TextBlock Grid.Column="0" Grid.Row="3" Width="40" Text="{Binding ColorBtnName4}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <ComboBox Grid.Column="1" Grid.Row="3" SelectedItem="{Binding Shain4}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+            <ComboBox Grid.Column="1" Grid.Row="3" SelectedItem="{Binding Shain4}" ItemsSource="{Binding ShainCombo}" IsEnabled="{Binding EnableShain4}" Margin="3" 
                           IsEditable="True" TextSearch.TextPath="CdShain" b:ComboBoxBehavior.MaxLength="7">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -125,7 +125,7 @@
             <TextBlock Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left"  Text="{Binding Shain4.NmShain}" VerticalAlignment="Center" Margin="20 0 0 0" />
 
             <TextBlock Grid.Column="0" Grid.Row="4" Width="40" Text="{Binding ColorBtnName5}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <ComboBox Grid.Column="1" Grid.Row="4" SelectedItem="{Binding Shain5}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+            <ComboBox Grid.Column="1" Grid.Row="4" SelectedItem="{Binding Shain5}" ItemsSource="{Binding ShainCombo}" IsEnabled="{Binding EnableShain5}" Margin="3" 
                           IsEditable="True" TextSearch.TextPath="CdShain" b:ComboBoxBehavior.MaxLength="7">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
