大仕分けグループ情報登録：入力ダイアログを最大化表示。サイズ指定削除
・他Entry画面と統一

--- a/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
+++ b/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
@@ -6,11 +6,10 @@
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Width="1400" Height="800"
              Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
-        <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}"/>
+        <Style TargetType="Window" BasedOn="{StaticResource InputDialog}"/>
     </prism:Dialog.WindowStyle>
 
     <UserControl.Resources>
