0007131: 集約得意先情報登録　追加／編集　入力画面　　「適用開始日・無効日」のToのカレンダー選択が英語表記になっている。

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -162,7 +162,7 @@
                         <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}" Language="ja"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                        <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
+                        <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}" Language="ja"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Button Grid.Column="4" Content="解除" Command="{Binding Release}" Margin="3" Focusable="False"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
