棚卸実績データ送信：タイトル修正、グリッド最小幅指定
・選択チェックボックスが隠れる為、最小値指定

--- a/src/BoxExpoter/Views/MainBoxExporter.xaml
+++ b/src/BoxExpoter/Views/MainBoxExporter.xaml
@@ -73,7 +73,7 @@
                   d:ItemsSource="{d:SampleData}">
 
             <DataGrid.Columns>
-                <DataGridTemplateColumn>
+                <DataGridTemplateColumn MinWidth="50">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEnabled}" />
