--- a/src/DistGroup/Views/InputDistGroupDlg.xaml
+++ b/src/DistGroup/Views/InputDistGroupDlg.xaml
@@ -65,35 +65,37 @@
         </ToolBarTray>
 
         <Grid>
+            <Grid.Resources>
+                <Style TargetType="Label">
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="Margin" Value="3"/>
+                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                </Style>
+
+                <Style TargetType="TextBlock">
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="Margin" Value="3"/>
+                    <Setter Property="VerticalAlignment" Value="Center"/>
+                </Style>
+
+                <Style TargetType="TextBox">
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                    <Setter Property="Margin" Value="3"/>
+                </Style>
+            </Grid.Resources>
+
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
-                <Grid.Resources>
-                    <Style TargetType="Label">
-                        <Setter Property="FontSize" Value="18"/>
-                        <Setter Property="Margin" Value="3"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-
-                    <Style TargetType="TextBlock">
-                        <Setter Property="FontSize" Value="18"/>
-                        <Setter Property="Margin" Value="3"/>
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                    </Style>
-
-                    <Style TargetType="TextBox">
-                        <Setter Property="VerticalAlignment" Value="Stretch"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                        <Setter Property="Margin" Value="3"/>
-                    </Style>
-                </Grid.Resources>
+            <Grid Grid.Column="0">               
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="5*"/>
-                    <RowDefinition Height="5*"/>
+                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="6*"/>
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0">
@@ -218,7 +220,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Content="【対象出荷バッチ】"/>
+                    <Label Grid.Row="0" Content="【対象出荷バッチ】" VerticalContentAlignment="Bottom"/>
                     <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="InputBatchColumns"/>
                     <DataGrid Grid.Row="1" x:Name="dataGrid" ItemsSource="{Binding Batches, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                               AutoGenerateColumns="False" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True" 
@@ -286,8 +288,8 @@
 
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="5*"/>
-                    <RowDefinition Height="5*"/>
+                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="6*"/>
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0">
@@ -373,26 +375,24 @@
 
                     <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="5.2*"/>
-                            <ColumnDefinition Width="4*"/>
-                            <ColumnDefinition Width="0.8*"/>
+                            <ColumnDefinition Width="8*"/>
+                            <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="1" Content="【コース順】"/>
+                        <Label Grid.Column="0" Content="【コース順】" Margin="30,0,0,0" VerticalAlignment="Bottom" />
                     </Grid>
 
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="5.2*"/>
-                            <ColumnDefinition Width="4*"/>
-                            <ColumnDefinition Width="0.8*"/>
+                            <ColumnDefinition Width="9*"/>
+                            <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
 
                         <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid3}" SettingsKey="InputCourseColumns"/>
-                        <DataGrid Grid.Column="1" x:Name="dataGrid3" ItemsSource="{Binding Courses, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedIndex="{Binding SelectCourseIndex}"
+                        <DataGrid Grid.Column="0" x:Name="dataGrid3" ItemsSource="{Binding Courses, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedIndex="{Binding SelectCourseIndex}"
                                   AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
-                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
+                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="30,3,3,3" FontSize="18">
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="LightGray"/>
@@ -417,7 +417,7 @@
                             </DataGrid.Columns>
                         </DataGrid>
 
-                        <Grid Grid.Column="2">
+                        <Grid Grid.Column="1">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
