--- a/src/DispShop/Views/MainDispShop.xaml
+++ b/src/DispShop/Views/MainDispShop.xaml
@@ -105,10 +105,10 @@
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="表示器No" Binding="{Binding TdUnitAddrCode}"/>
-                <DataGridTextColumn Header="コース" Binding="{Binding CdCource}"/>
-                <DataGridTextColumn Header="配送順" Binding="{Binding CdRoute}"/>
-                <DataGridTextColumn Header="得意先ｺｰﾄﾞ" Binding="{Binding CdTokuisaki}"/>
-                <DataGridTextColumn Header="得意先名称" Binding="{Binding NmTokuisaki}"/>
+                <DataGridTextColumn Header="コース" Binding="{Binding CdSumCource}"/>
+                <DataGridTextColumn Header="配送順" Binding="{Binding CdSumRoute}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="得意先ｺｰﾄﾞ" Binding="{Binding CdSumTokuisaki}"/>
+                <DataGridTextColumn Header="得意先名称" Binding="{Binding NmSumTokuisaki}"/>
                 <DataGridTextColumn Header="番重数" Binding="{Binding BoxCnt}"  ElementStyle="{StaticResource RightTextElement}"/>
                 <DataGridTextColumn Header="総数" Binding="{Binding Ops}"  ElementStyle="{StaticResource RightTextElement}"/>
             </DataGrid.Columns>
