--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -142,7 +142,8 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="仕分グループコード"/>
-                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup}" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="5"/>
+                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup, UpdateSourceTrigger=PropertyChanged, Delay=300}"
+                                 InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="5"/>
                         <Label Grid.Column="2" Background="Blue"/>
                         <TextBlock Grid.Column="2" Text="{Binding NmDistGroup}" Foreground="White"/>
                     </Grid>
